# src

./: .gitignore  README.md
discord-verification-bot/: go.mod  main.go
discord-verification-bot/cmd/: bot.go
opium-backend/: .gitignore  README.md  package.json  quotes.txt  tsconfig.json  types.ts
opium-backend-v2/: config.example.toml  go.mod  go.sum  main.go
opium-backend-v2/middleware/: middleware_api.go  middleware_auth.go
opium-backend-v2/models/: model_domains.go  model_invites.go  model_user.go  model_views.go
opium-backend-v2/routes/: account_routes.go  domain_route.go  forgot_route.go  leaderboard_route.go  profile_route.go  register_route.go  route_login.go  signout_route.go  user_connections.go  user_routes.go  user_upload_route.go  verify_email_route.go  views_route.go
opium-backend/model/: invites.ts  messages.ts  user.ts
opium-backend/src/: index.ts
opium-backend/utils/: db.ts  mailgun.ts
opium-legacy-frontend/: Dockerfile  bun.lockb  docker-compose.yml  example.env  global.d.ts  next.config.ts  package.json  tailwind.config.ts
opium-legacy-frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
opium-legacy-frontend/components/: Acordian.tsx  Header.tsx  Hero.tsx  Pricing.tsx  Profile.css  ProfileComp.tsx  Sidebar.tsx  Slider.tsx  Switch.tsx  Toolip.tsx  UploadAUD.tsx  UploadAvatar.tsx  UploadBg.tsx  Uploadbanner.tsx  UsernameLink.tsx  alert.tsx  button.tsx  chillax.css  input.tsx  (+1 more)
websocket-rpc/: Cargo.toml  README.md
websocket-rpc/src/: example.config.rs  main.rs
websocket-rpc/src/server/: mod.rs  rpc.rs  server.rs
(+51 files in other folders)
