[package]
name = "websocket-rpc-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.4", features = ["ws", "macros"] }
tower-http = { version = "0.6.6", features = ["cors"] }
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"